[package]
name = "StormRs"
version = "0.1.0"
authors = ["Danda <sansanodaniels@gmail.com>"]
edition = "2018"

[lib]
name = "StormRs"
path = "src/lib.rs"

[[bin]]
name = "bin_exec"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
