[package]
name = "StormRs"
version = "0.1.0"
authors = ["Danda <sansanodaniels@gmail.com>"]
edition = "2018"

[lib]
name = "StormRs"
path = "src/lib.rs"

[[bin]]
name = "bin_exec"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"

serde_json = "1.0"

futures = "0.3"

hyper = "0.13"

tokio = { version = "0.2", features = ["full"] }
